--- a/_gatsby/slices/_gatsby-scripts-1.html
+++ b/_gatsby/slices/_gatsby-scripts-1.html
@@ -2,6 +2,6 @@
           <script
             id="gatsby-chunk-mapping"
           >
-            window.___chunkMapping="{\"app\":[\"/app-b5da3e7f389d079af8ae.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-c83863f0740df5af55e9.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-45104943ad5bf45ecb21.js\"]}";
+            window.___chunkMapping="{\"app\":[\"/app-903a85a83b97c47aaea0.js\"],\"component---src-pages-404-js\":[\"/component---src-pages-404-js-c83863f0740df5af55e9.js\"],\"component---src-pages-index-js\":[\"/component---src-pages-index-js-45104943ad5bf45ecb21.js\"],\"component---src-templates-page-js\":[\"/component---src-templates-page-js-ff4b4d8edc0312afaf7f.js\"],\"component---src-templates-product-js\":[\"/component---src-templates-product-js-5cc290465be92ad0e015.js\"]}";
           </script>
-        <script>window.___webpackCompilationHash="196af26d8aaddfdb5c7a";</script><script src="/webpack-runtime-1946ae84a8ca1c360385.js" async></script><script src="/framework-2000302d0c42d8e97aa3.js" async></script><script src="/app-b5da3e7f389d079af8ae.js" async></script>
+        <script>window.___webpackCompilationHash="c1f3f2856bb5c24909a2";</script><script src="/webpack-runtime-f08c5ab6c9c815e9c1e5.js" async></script><script src="/framework-2000302d0c42d8e97aa3.js" async></script><script src="/app-903a85a83b97c47aaea0.js" async></script>
